# ai-governance-framework

./: .gitignore  LICENSE  PRINCIPLES.md  README.md  pyproject.toml
docs/: eu_ai_act_mapping.md  failure_modes.md
examples/: ai_readiness_gate.py  basic_usage.py  compliance_check.py  document_approval.py
governance/: __init__.py  audit.py  core.py  decisions.py  exceptions.py  metrics.py  rules.py  scoring.py
tests/: test_audit.py  test_core.py  test_decisions_ai.py  test_engine_ai_extensions.py  test_fail_closed.py  test_metrics.py  test_scoring.py
