[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-governance-framework"
version = "0.1.0"
description = "A production-ready AI governance framework implementing fail-closed principles for EU AI Act compliance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Jorge Pessoa" },
]
keywords = ["ai-governance", "eu-ai-act", "compliance", "fail-closed", "audit-trail"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/jpbyteforge/ai-governance-framework"
Documentation = "https://github.com/jpbyteforge/ai-governance-framework/tree/main/docs"
Repository = "https://github.com/jpbyteforge/ai-governance-framework"
Issues = "https://github.com/jpbyteforge/ai-governance-framework/issues"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
